<resources>
    <string name="app_name">Верификация</string>
    <string name="object_info_route">Маршрут</string>
    <string name="object_info_date">Дата тех. обследования</string>
    <string name="object_info_status">Статус</string>
    <string name="object_info_open_inspection">Провести техническое обследование</string>
    <string name="object_info_empty_title">Список объектов пуст</string>
    <string name="verification_map_title">Карта объектов ТО</string>
    <string name="verification_object_list_title">Объекты по обращению с ТКО</string>
    <string name="verification_map_search_hint">Поиск</string>
    <string name="bottom_navigation_objects_map">Карта объектов</string>
    <string name="bottom_navigation_objects_list">Список объектов</string>
    <string name="bottom_navigation_settings">Настройки</string>
    <string name="object_list_search_hint">Поиск</string>
    <string name="object_item_date_title">Дата проведения технического обследования</string>
    <string name="object_item_status_title">Статус технического обследования</string>
    <string name="object_inspection_toolbar_title">Техническое обследование</string>
    <string name="object_inspection_fill_label">Заполните следующие этапы</string>
    <string name="object_inspection_card_label_main_info">Общая информация</string>
    <string name="object_inspection_card_label_product_info">Информация о выпускаемых товарах</string>
    <string name="object_inspection_card_label_schedule">График работы</string>
    <string name="object_inspection_card_label_tech">Технологическая часть</string>
    <string name="object_inspection_card_label_infrastructure">Объекты инфраструктуры</string>
    <string name="object_inspection_card_label_equipment">Оборудование</string>
    <string name="object_inspection_card_label_secondary_resources">ВМР</string>
    <string name="object_inspection_card_progress">%1$d/%2$d</string>
    <string name="object_inspection_send">Отправить</string>
    <string name="filter_status_title">Статус проведения технического обследования (инвентаризации)</string>
    <string name="filter_status_hint">Выберите статус</string>
    <string name="filter_category_title">Категория объекта</string>
    <string name="filter_category_hint">Выберите категорию</string>
    <string name="filter_region_title">Субъект Российской Федерации</string>
    <string name="filter_region_hint">Выберите субъект Российской Федерации</string>
    <string name="filter_survey_status_title">Статус технического обследования</string>
    <string name="filter_survey_status_hint">Выберите статус</string>
    <string name="object_sort_by_name_descending">По имени (по убыванию)</string>
    <string name="object_sort_by_name_ascending">По имени (по возрастанию)</string>
    <string name="object_sort_by_created_at_descending">По дате (по убыванию)</string>
    <string name="object_sort_by_created_at_ascending">По дате (по возрастанию)</string>
    <string name="object_sort_by_status_descending">По статусу (по убыванию)</string>
    <string name="object_sort_by_status_ascending">По статусу (по возрастанию)</string>
    <string name="object_type_treatment">Объект обработки отходов</string>
    <string name="object_type_placement">Объект размещения отходов</string>
    <string name="object_type_recycling">Объект утилизации отходов</string>
    <string name="object_type_disposal">Объект обезвреживания отходов</string>
    <string name="survey_name_hint">Укажите наименование</string>
    <string name="survey_save">Сохранить</string>
    <string name="survey_add">Добавить</string>
    <string name="survey_media_update_not_complete">Загрузка медиа не завершена</string>
    <string name="survey_reason_label">Причина</string>
    <string name="survey_reason_hint">Укажите причину</string>
    <string name="survey_time_hint">Введите график работы</string>
    <string name="survey_number_hint">Введите число</string>
    <string name="survey_save_confirm_title">Сохранение этапа</string>
    <string name="survey_save_confirm_message">Объекты с незаполненными данными будут удалены, вы уверены?</string>
    <string name="survey_power_hint">Укажите мощность</string>
    <string name="survey_material_hint">Укажите материал</string>
    <string name="survey_purpose_hint">Укажите назначение</string>
    <string name="survey_weight_hint">Укажите массу</string>
    <string name="survey_area_hint">Укажите площадь</string>
    <string name="survey_height_hint">Укажите высоту</string>
    <string name="survey_relief_hint">Укажите перепад высот на участке, наличие заболоченных территорий, лесных массивов</string>
    <string name="survey_area_wastes_hint">Напишите, какие отходы накапливаются на площадке об отходах</string>
    <string name="survey_receiving_wastes_types_hint">Укажите все виды используемых для производства товаров и услуг отходы или вторичные материальные ресурсы</string>
    <string name="survey_tech_process_hint">Кратко опишите процесс</string>
    <string name="geo_data_request_dialog_message_photo_creation">Геоданные нужны для определения геопозиции сделанной фотографии</string>
    <string name="geo_data_request_reject_toast_photo_creation">Создание фотографии без геопозиции невозможно</string>
    <string name="geo_data_empty">Геопозиция недоступна</string>
    <string name="survey_choose_hint">Не выбран</string>
    <string name="survey_other_status_name">Иной статус</string>
    <string name="survey_other_status_hint">Укажите статус</string>
    <string name="survey_equipment_count_hint">Укажите количество</string>
    <string name="survey_general_federal_district_label">Наименование субъекта Российской Федерации</string>
    <string name="survey_general_object_name_label">Наименование объекта</string>
    <string name="survey_general_object_category_label">Вид обращения с отходами</string>
    <string name="survey_general_fias_address_label">Адрес объекта согласно ФИАС</string>
    <string name="survey_general_address_description_label">Адрес объекта</string>
    <string name="survey_general_address_description_hint">Введите адрес объекта или ближайший адрес</string>
    <string name="survey_general_object_status_label">Статус объекта</string>
    <string name="survey_schedule_title">График работы</string>
    <string name="survey_week_schedule_title">Расписание</string>
    <string name="survey_schedule_every_day_title">Ежедневно</string>
    <string name="survey_schedule_full_day_title">Круглосуточно</string>
    <string name="survey_schedule_without_breaks_title">Без перерыва</string>
    <string name="survey_schedule_break_title">Перерыв</string>
    <string name="survey_schedule_work_mode_title">Режим работы</string>
    <string name="survey_schedule_break_description">Перерыв указывается суммарно за весь день</string>
    <string name="survey_schedule_work_schedule">Режим работы</string>
    <string name="survey_schedule_shift_per_day">Количество рабочих смен в сутки</string>
    <string name="survey_schedule_workdays_per_year">Количество рабочих дней в году</string>
    <string name="survey_schedule_workplace_count">Количество рабочих мест</string>
    <string name="survey_schedule_management_personnel_count">Количество управленческого персонала</string>
    <string name="survey_schedule_production_personnel_count">Количество производственного персонала</string>
    <string name="survey_equipment_add">Добавить оборудование</string>
    <string name="survey_equipment_empty">Список оборудования пуст</string>
    <string name="survey_equipment_equipment_title">Оборудование</string>
    <string name="survey_equipment_conveyor_title">Конвейеры</string>
    <string name="survey_equipment_serving_conveyor_title">Подающий конвейер</string>
    <string name="survey_equipment_sort_conveyor_title">Сортировочный конвейер</string>
    <string name="survey_equipment_reverse_conveyor_title">Реверсивный конвейер</string>
    <string name="survey_equipment_press_conveyor_title">Подающий конвейер пресса ВМР</string>
    <string name="survey_equipment_other_conveyor_title">Иные конвейеры</string>
    <string name="survey_equipment_back_breaker_conveyor_title">Разрыватель пакетов</string>
    <string name="survey_equipment_separator_title">Сепараторы</string>
    <string name="survey_equipment_separator_metal_title">Сепаратор цветных металлов</string>
    <string name="survey_equipment_separator_iron_title">Сепаратор чёрных металлов</string>
    <string name="survey_equipment_separator_optic_title">Оптический сепаратор</string>
    <string name="survey_equipment_separator_eddy_current_title">Вихретоковой сепаратор</string>
    <string name="survey_equipment_separator_ballistic_title">Баллистический сепаратор</string>
    <string name="survey_equipment_separator_fraction_title">Сепаратор легкой и тяжелой фракции</string>
    <string name="survey_equipment_separator_vibration_title">Вибрационный сепаратор</string>
    <string name="survey_equipment_separator_plastic_title">Перфоратор ПЭТ-тары</string>
    <string name="survey_equipment_separator_other_title">Иные сепараторы</string>
    <string name="survey_equipment_label_separator_other_name">Наименование сепаратора</string>
    <string name="survey_equipment_press_title">Прессы</string>
    <string name="survey_equipment_press_horizontal_title">Горизонтальные прессы</string>
    <string name="survey_equipment_press_vertical_title">Вертикальные прессы</string>
    <string name="survey_equipment_press_compactor_title">Пресс компакторы</string>
    <string name="survey_equipment_press_packing_machines_title"> Упаковочные машины для ТКО</string>
    <string name="survey_equipment_press_other_title">Иные прессы</string>
    <string name="survey_equipment_label_press_other_name">Наименование пресса</string>
    <string name="survey_equipment_hint_additional_type">Не указано</string>
    <string name="survey_equipment_label_additional_type">Тип оборудования</string>
    <string name="survey_equipment_additional_equipment_title">Дополнительное оборудование</string>
    <string name="survey_equipment_additional_other_title">Иное оборудование</string>
    <string name="survey_equipment_label_additional_other_name">Наименование оборудования</string>
    <string name="survey_equipment_label_brand">Марка</string>
    <string name="survey_equipment_label_manufacturer">Производитель</string>
    <string name="survey_equipment_label_count">Количество оборудования</string>
    <string name="survey_equipment_label_conveyor_length">Длина конвейера (м)</string>
    <string name="survey_equipment_label_conveyor_width">Ширина конвейера (м)</string>
    <string name="survey_equipment_label_conveyor_speed">Рабочая скорость линии конвейера (м/мин)</string>
    <string name="survey_equipment_label_conveyor_load_mechanism">Механизм загрузки отходов на подающий конвейер</string>
    <string name="survey_equipment_label_conveyor_waste_height">Толщина слоя отходов подающихся на конвейер (см)</string>
    <string name="survey_equipment_label_conveyor_sort_point">Количество постов сортировки (шт.)</string>
    <string name="survey_equipment_label_photo">Фото оборудования</string>
    <string name="survey_equipment_label_passport">Паспорт оборудования</string>
    <string name="survey_equipment_label_conveyor_other_name">Наименование конвейера</string>
    <string name="survey_equipment_hint_brand">Укажите марку</string>
    <string name="survey_equipment_hint_manufacturer">Укажите производителя</string>
    <string name="survey_equipment_hint_conveyor_type">Укажите тип</string>
    <string name="survey_equipment_hint_conveyor_length">Укажите общую длину</string>
    <string name="survey_equipment_hint_conveyor_width">Укажите ширину в метрах до сотых</string>
    <string name="survey_equipment_hint_conveyor_speed">Укажите скорость</string>
    <string name="survey_equipment_hint_conveyor_load_mechanism">Опишите механизм</string>
</resources>